update to fix issue contrast error

--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ section {
   width: 100%;
   border-bottom-width: 02px;
   border-bottom-style: solid;
-  border-bottom-color: gray;
+  border-bottom-color: darkblue;
 }
 
 article {
